--- a/NewsPaper/static/css/my_styles.css
+++ b/NewsPaper/static/css/my_styles.css
@@ -220,3 +220,8 @@ a.delete_link:hover {
                 0px 8px 16px rgba(0,0,0,0.1);
 
             }
+
+
+.register_form {
+    margin-bottom: 50px;
+}
