--- a/NewsPaper/templates/signup/signup_site.html
+++ b/NewsPaper/templates/signup/signup_site.html
@@ -1,20 +1,16 @@
 {% extends 'index.html' %}
-{% comment %} {% extends 'account/base.html' %} {% endcomment %}
 
 {% block title %}
-Register
+Регистрация
 {% endblock title %}
-{% comment %} <title>{% block head_title %}{% endblock %}</title> {% endcomment %}
 
 {% block content %}
-<h2>
- Register
-</h2>
 <div class="col-md-6 offset-md-2 register_form">
-<form method="post">
-{% csrf_token %}
-{{ form.as_p }}
-<div class="d-grid gap-2">
+    <h3>Регистрация</h3>
+    <form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <div class="d-grid gap-2">
     <input type="submit" class="btn btn-outline-success" value="Регистрация">
 </div>
 </form>
